corrected spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,3 @@
-/* Reset and basic styling */
-html,
-body,
-h1,
-h2,
-h3,
-p,
-ul,
-li {
-    margin: 0;
-    padding: 0;
-}
-
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
